--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,11 +1,19 @@
 {% load static %}
+
+<link rel="stylesheet"
+      type="text/css"
+      href="{% static 'website/css/bootstrap.css' %}"
+/>
+
+<link rel="stylesheet"
+      type="text/css"
+      href="{% static 'website/css/custom.css' %}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet"
-          href="{% static 'website/style.css' %}">
 </head>
 <body>
     {% block content %}
