Created flippable card, added some customization to navbar and page content.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -44,24 +44,33 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Features
+                            Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a href="#" class="dropdown-item">Feature #1</a></li>
-                            <li><a href="#" class="dropdown-item">Feature #2</a></li>
-                            <li><a href="#" class="dropdown-item">Feature #3</a></li>
+                            <li><a href="#" class="dropdown-item">Project #1</a></li>
+                            <li><a href="#" class="dropdown-item">Project #2</a></li>
+                            <li><a href="#" class="dropdown-item">Project #3</a></li>
                         </ul>
                     </li>
                     <li class="nav-item active">
                         <a href="#" class="nav-link">
-                            Pricing
+                            Resume
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="https://www.linkedin.com/in/preston-danielson-eit-1844b9103/" class="nav-link">
+                            LinkedIn
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="https://github.com/PDani96" class="nav-link">
+                            GitHub
                         </a>
                     </li>
                 </ul>
             </div>
             <form class="d-flex">
-                <input type="text" class="form-control me-2">
-                <button type="submit" class="btn btn-primary">Search</button>
+                <button type="submit" class="btn btn-primary">Contact me</button>
             </form>
         </div>
     </nav>
