--- a/website/templates/website/welcome.html
+++ b/website/templates/website/welcome.html
@@ -5,42 +5,58 @@
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
-    <h1>Welcome to my Personal Portfolio!</h1>
-    <p>
-        This is a rough draft of the personal portfolio home page for
-        <em>Preston Danielson</em>
-        See <a href="https://www.linkedin.com/in/preston-danielson-eit-1844b9103/">LinkedIn</a>
-    </p>
-
-    <div class="row justify-content-center">
-        <div class="card" style="width: 35rem; height: 20rem;">
-            <div class="shadow p-3 mb-5 bg-white rounded">
-                <div class="card-img-top d-flex align-items-center bg-white">
-                    <div class="avatar-big">
-                        <img class="avatar-img rounded-circle" src="{% static 'img/headshot.jpg' %}" />
+    <div class="container-fluid mt-5 mb-5">
+        <div class="row justify-content-center">
+            <div class="col-auto card-container">
+                <div class="card-flip">
+                    <div class="card front">
+                        <div class="shadow-lg p-2 bg-white rounded">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <div class="avatar-big">
+                                            <img class="avatar-img rounded-circle"
+                                                 src="{% static 'img/headshot.jpg' %}"
+                                            />
+                                        </div>
+                                    </div>
+                                    <div class="col-8">
+                                        <h4>Preston Danielson</h4>
+                                        Electrical/Software Engineer
+                                    </div>
+                                </div>
+                                <div class="row mt-4">
+                                    <div class="col-4">
+                                        <h6>Skills:</h6>
+                                    </div>
+                                    <div class="col-8">
+                                        <p>
+                                            Electrical Design | PLC | Automation | Python | <br>
+                                            C# | Java | HTML | CSS | JS | Linux | <br>
+                                            Agile Web-Development | HMI
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="col p-2 m-0">Preston Danielson</h4>
-                    <p class="col p-2 m-0">Electrical/Software Engineer</p>
-                </div>
-
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card back">
+                        <div class="shadow-lg p-3 bg-white rounded">
+                            Back
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <h2>Meetings</h2>
+    <h1>Work Experience:</h1>
+    <p>Company | Start Date - End Date</p>
+    <p>Job Title</p>
     <ul>
-        {% for meeting in meetings %}
-            <li>
-                <a href="{% url 'detail' meeting.id %}">
-                    {{ meeting.title }}
-                </a>
-            </li>
-        {% endfor %}
+        <li>Key point 1</li>
+        <li>Key point 2</li>
+        <li>Key point 3</li>
     </ul>
-    <a href="{% url 'rooms' %}">Rooms list</a>
+
 {% endblock %}
