--- a/website/static/website/css/custom.css
+++ b/website/static/website/css/custom.css
@@ -58,3 +58,14 @@
     transform: rotateY(-180deg);
 }
 
+.parallax-bg{
+    background: #000;
+    background: linear-gradient(
+            rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.8)
+        ),
+        var(--url);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+}
