Added each section for work experience with images.

--- a/website/static/website/css/custom.css
+++ b/website/static/website/css/custom.css
@@ -67,5 +67,6 @@
         var(--url);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: cover;
 }
+
