More styling, added logo and favicon, business card formatting.

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Welcome{% endblock %}
+{% block title %}Preston Danielson | Engineer{% endblock %}
 
 {% block content %}
     <div class="parallax-bg" style="background-size: 100% auto; --url: url({% static 'img/dallas_skyline.jpg' %});">
@@ -11,39 +11,42 @@
                 <div class="col-auto card-container mt-5 mb-5">
                     <div class="card-flip">
                         <div class="card front">
-                            <div class="shadow-lg p-2 bg-white rounded">
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <div class="avatar-big">
-                                                <img class="avatar-img rounded-circle"
-                                                     src="{% static 'img/headshot.jpg' %}"
-                                                />
-                                            </div>
-                                        </div>
-                                        <div class="col-8">
-                                            <h4><b>Preston Danielson</b></h4>
-                                            Electrical/Software Engineer
+                            <div class="container-fluid p-3">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <div class="avatar-big">
+                                            <img class="avatar-img rounded-circle"
+                                                 src="{% static 'img/headshot.jpg' %}"
+                                            />
                                         </div>
                                     </div>
-                                    <div class="row mt-4">
-                                        <div class="col-4">
-                                            <h6>Skills:</h6>
-                                        </div>
-                                        <div class="col-8">
-                                            <p>
-                                                Electrical Design | PLC | Automation | Python | <br>
-                                                C# | Java | HTML | CSS | JS | Linux | <br>
-                                                Agile Web-Development | HMI
-                                            </p>
-                                        </div>
+                                    <div class="col-8">
+                                        <h4><b>Preston Danielson</b></h4>
+                                        <p style="font-size: 0.875em">
+                                            Electrical/Software Engineer<br>
+                                            DFW Metroplex<br>
+                                            (225) 301-4116<br>
+                                            preston@pdani.online
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-4">
+                                        <h6>Skills:</h6>
+                                    </div>
+                                    <div class="col-8">
+                                        <p>
+                                            Electrical Design | PLC | Automation | Python | <br>
+                                            C# | Java | HTML | CSS | JS | Linux | <br>
+                                            Agile Web-Development | HMI
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="card back">
                             <div class="shadow-lg p-3 bg-white rounded">
-                                Back
+                                About me: TO-DO
                             </div>
                         </div>
                     </div>
@@ -52,11 +55,11 @@
         </div>
     </div>
 
-    <div class="d-flex p-3 bg-dark" style="justify-content:center">
+    <div class="d-flex p-3 bg-dark" style="justify-content:center; border: 1px solid black">
         <h4 style="color:white"><b>Work Experience</b></h4>
     </div>
 
-    <div class="d-flex p-2 bg-secondary" style="justify-content:center">
+    <div class="d-flex p-2 bg-secondary" style="justify-content:center; border: 1px solid black">
         <h5 style="color:white"><b>Apex Systems</b></h5>
     </div>
 
@@ -84,7 +87,7 @@
         </div>
     </div>
 
-    <div class="d-flex p-2 bg-secondary" style="justify-content:center">
+    <div class="d-flex p-2 bg-secondary" style="justify-content:center; border: 1px solid black">
         <h5 style="color:white"><b>Siemens Logistics</b></h5>
     </div>
 
@@ -112,7 +115,7 @@
         </div>
     </div>
 
-    <div class="d-flex p-2 bg-secondary" style="justify-content:center">
+    <div class="d-flex p-2 bg-secondary" style="justify-content:center; border: 1px solid black">
         <h5 style="color:white"><b>Sabre Industries</b></h5>
     </div>
 
@@ -140,7 +143,7 @@
         </div>
     </div>
 
-    <div class="d-flex p-2 bg-secondary" style="justify-content:center">
+    <div class="d-flex p-2 bg-secondary" style="justify-content:center; border: 1px solid black">
         <h5 style="color:white"><b>Fenway Group</b></h5>
     </div>
 
