--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+<link rel="icon" href="{% static 'img/icon.png' %}">
+
 <link rel="stylesheet"
       type="text/css"
       href="{% static 'website/css/bootstrap.css' %}"
@@ -21,9 +23,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand mb-0 h1">
-                <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" />
-                Navbar
+            <a href="{% url 'home' %}" class="navbar-brand mb-0 h1">
+                <img class="d-inline-block align-top" src="{% static 'img/logo.jpg' %}" width="auto" height="50" style="border-radius: 10px"/>
             </a>
             <button
             type="button"
@@ -38,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a href="#" class="nav-link active">
+                        <a href="{% url 'home' %}" class="nav-link active">
                             Home
                         </a>
                     </li>
