--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -54,7 +54,7 @@
                         </ul>
                     </li>
                     <li class="nav-item active">
-                        <a href="#" class="nav-link">
+                        <a href="{% url 'resume' %}" class="nav-link">
                             Resume
                         </a>
                     </li>
