Added new headshot and work descriptions. Formatted business card and added About me section.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,6 +21,9 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    <div class="d-flex p-2 bg-warning" style="justify-content:center; border: 1px solid black">
+        <h6 style="color:black"><b>Construction zone: Work in progress</b></h6>
+    </div>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <a href="{% url 'home' %}" class="navbar-brand mb-0 h1">
