--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -10,13 +10,13 @@
             <div class="row justify-content-center">
                 <div class="col-auto card-container mt-5 mb-5">
                     <div class="card-flip">
-                        <div class="card front">
+                        <div class="card front" style="height: 300px; width: 525px;">
                             <div class="container-fluid p-3">
                                 <div class="row">
                                     <div class="col-4">
                                         <div class="avatar-big">
                                             <img class="avatar-img rounded-circle"
-                                                 src="{% static 'img/headshot.jpg' %}"
+                                                 src="{% static 'img/headshot1.jpg' %}"
                                             />
                                         </div>
                                     </div>
@@ -44,9 +44,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card back">
-                            <div class="shadow-lg p-3 bg-white rounded">
-                                About me: TO-DO
+                        <div class="card back" style="height: 300px; width: 525px;">
+                            <div class="row pt-3 px-3">
+                                <h6>About me:</h6>
+                            </div>
+                            <div class="row px-3">
+                                <p>
+                                    &emsp;Engineer with 6+ years of experience in software development and electrical design.
+                                    Experienced in all phases of the Agile software development lifecycle, as well as commisioning live controls systems and on-site troubleshooting.
+                                    Seeking a position to grow my software skills, while utilizing my knowledge of hardware and electrical engineering fundamentals.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -76,8 +83,7 @@
                                 <h5 class="card-title">Engineering Consultant</h5>
                                 <p class="card-text"><b>2021-2022</b></p>
                                 <p class="card-text">
-                                    Sub-contracted work for Boeing to assist in research and development of robotic manufacturing systems.
-                                    Worked remotely with a small team of engineers on electrical design, PLC logic, robotics, and HMI development.
+                                    Sub-contracted work with Boeing Research and Development team to design a cobot platform for aircraft maintenance and manufacturing.
                                 </p>
                             </div>
                         </div>
@@ -101,11 +107,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Controls Engineer</h5>
+                                <h5 class="card-title">Automation & Controls Engineer</h5>
                                 <p class="card-text"><b>2018-2021</b></p>
                                 <p class="card-text">
-                                    Sub-contracted work for Boeing to assist in research and development of robotic manufacturing systems.
-                                    Worked remotely with a small team of engineers on electrical design, PLC logic, robotics, and HMI development.
+                                    Designed and commissioned PLC controls and electrical panels for airport baggage handling systems and UPS parcel sorting systems.
                                 </p>
                             </div>
                         </div>
@@ -132,8 +137,7 @@
                                 <h5 class="card-title">Electrical Engineering Intern</h5>
                                 <p class="card-text"><b>2017-2018</b></p>
                                 <p class="card-text">
-                                    Sub-contracted work for Boeing to assist in research and development of robotic manufacturing systems.
-                                    Worked remotely with a small team of engineers on electrical design, PLC logic, robotics, and HMI development.
+                                    Designed and commissioned PLC controls systems to monitor and control environmental conditions of Battery Energy Storage Systems.
                                 </p>
                             </div>
                         </div>
@@ -157,11 +161,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Software Engineering Consultant</h5>
+                                <h5 class="card-title">Software Engineer</h5>
                                 <p class="card-text"><b>2016-2017</b></p>
                                 <p class="card-text">
-                                    Sub-contracted work for Boeing to assist in research and development of robotic manufacturing systems.
-                                    Worked remotely with a small team of engineers on electrical design, PLC logic, robotics, and HMI development.
+                                    Programmer on a full-stack scrum development team to update and maintain enterprise web applications for Southwest Airlines.
                                 </p>
                             </div>
                         </div>
