--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -74,7 +74,9 @@
                 </ul>
             </div>
             <form class="d-flex">
-                <button type="submit" class="btn btn-primary">Contact me</button>
+                <button type="submit" class="btn btn-primary">
+                    <a href="mailto:preston@pdani.online" style="color:white; text-decoration:none;">Hire me</a>
+                </button>
             </form>
         </div>
     </nav>
