Added script tag for google analytics.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,5 +1,15 @@
 {% load static %}
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0CC46RVZC7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0CC46RVZC7');
+</script>
+
 <link rel="icon" href="{% static 'img/icon.png' %}">
 
 <link rel="stylesheet"
