--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -96,7 +96,8 @@
             background-attachment: fixed;
             background-size: cover;">
         {% block content %}
+        {% endblock %}
+        <div class="row justify-content-center pt-5"></div>
     </div>
-    {% endblock %}
 </body>
 </html>
