Finished ESL project page.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -61,9 +61,10 @@
                             Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a href="#" class="dropdown-item">Project #1</a></li>
-                            <li><a href="#" class="dropdown-item">Project #2</a></li>
-                            <li><a href="#" class="dropdown-item">Project #3</a></li>
+                            <li><a href="#" class="dropdown-item">Personal Portfolio</a></li>
+                            <li><a href="{% url 'esl' %}" class="dropdown-item">Electrostatic Loudspeaker</a></li>
+                            <li><a href="#" class="dropdown-item">Impact Sensor</a></li>
+                            <li><a href="#" class="dropdown-item">Reaction Monitor</a></li>
                         </ul>
                     </li>
                     <li class="nav-item active">
